syntax = "proto3";

package pb_work;

message Request {
    string task_id = 1; // 当前任务的id

    repeated string task_item = 3; // 结果集
}

message Response {
    int64 status_code = 1; // 相应状态码
}

service Task {
    rpc Task (Request) returns (Response);
}
